menu overflow fixes

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,10 +7,10 @@
 body {
   height: 100vh;
   margin: 0;
-  overflow: hidden;
 }
 
-section {
+.menu-wrapper {
+  overflow: hidden;
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -79,7 +79,7 @@ section {
 }
 
 @media (max-width: 700px) {
-  section {
+  .menu-wrapper {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
 
